--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,1 +1,15 @@
+version: 0.2
 
+phases:
+  install:
+    runtime-versions:
+      python: 3.7
+  build:
+    commands:
+      - pip install -r requirements.txt --target .
+  post_build:
+    commands:
+      - echo Build completed on 'date'    
+artifacts:
+  files:
+    - '**/*'
