--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     runtime-versions:
       python: 3.7
-  build:
+  #build:
    # commands:
       #- pip install -r requirements.txt --target .
   post_build:
